--- a/configure.ac
+++ b/configure.ac
@@ -18,5 +18,5 @@ AC_PROG_CC
 
 # Checks for library functions.
 
-AC_CONFIG_FILES([Makefile])
-AC_OUTPUT
+#AC_CONFIG_FILES([Makefile src/Makefile])
+AC_OUTPUT(Makefile src/Makefile)
